[gd_scene load_steps=8 format=3 uid="uid://bm4bdq6ka013n"]

[ext_resource type="Script" path="res://overworld/scripts/main_menu.gd" id="1_w25qy"]
[ext_resource type="Theme" uid="uid://d2ijyc316xeom" path="res://assets/art/ui_elements/ui_theme.tres" id="1_y2jls"]
[ext_resource type="Texture2D" uid="uid://cm1xjw1g442ht" path="res://assets/main_menu_background.png" id="2_jxyfb"]
[ext_resource type="Texture2D" uid="uid://6mcb7hf0rp0k" path="res://assets/art/ui_elements/Box_border_side.png" id="4_dh2lh"]
[ext_resource type="Texture2D" uid="uid://co3jrch10y3mb" path="res://assets/art/ui_elements/menu_container_top.png" id="5_3tcp8"]
[ext_resource type="Texture2D" uid="uid://dida36t6h2yy" path="res://assets/art/ui_elements/menu_container_middle.png" id="6_y8um2"]
[ext_resource type="Texture2D" uid="uid://s2at4kbvef23" path="res://assets/art/ui_elements/menu_container_bottom.png" id="7_i5sbm"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y2jls")
script = ExtResource("1_w25qy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jxyfb")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 283.0
offset_top = 265.0
offset_right = 751.0
offset_bottom = 306.0
texture = ExtResource("4_dh2lh")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 285.0
offset_top = 556.0
offset_right = 753.0
offset_bottom = 597.0
texture = ExtResource("4_dh2lh")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 552.0
offset_top = 556.0
offset_right = 1020.0
offset_bottom = 597.0
texture = ExtResource("4_dh2lh")
expand_mode = 3
stretch_mode = 4
flip_h = true

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 552.0
offset_top = 265.0
offset_right = 1020.0
offset_bottom = 306.0
texture = ExtResource("4_dh2lh")
expand_mode = 3
stretch_mode = 4
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 387.0
offset_top = 344.0
offset_right = 721.0
offset_bottom = 523.0

[node name="overworld" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 56
text = "New Game
"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 56
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 56
text = "Exit"

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="About" type="Button" parent="."]
layout_mode = 2
offset_left = 495.0
offset_top = 564.0
offset_right = 615.0
offset_bottom = 589.0
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 22
text = "About"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 306.0
offset_right = 789.0
offset_bottom = 700.0

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("5_3tcp8")
expand_mode = 5
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer2"]
layout_mode = 2
texture = ExtResource("6_y8um2")
expand_mode = 5
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("7_i5sbm")
expand_mode = 5
stretch_mode = 4

[connection signal="pressed" from="VBoxContainer/overworld" to="." method="_on_overworld_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="About" to="." method="_on_about_pressed"]
